--- a/platformio.ini
+++ b/platformio.ini
@@ -14,4 +14,6 @@ board = nodemcu-32s
 framework = arduino
 monitor_speed = 115200
 monitor_port = COM24
-lib_deps = h2zero/NimBLE-Arduino@^2.3.6
+lib_deps = 
+	h2zero/NimBLE-Arduino@^2.3.6
+	bblanchon/ArduinoJson@^7.4.2
