--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,7 @@ board = nodemcu-32s
 framework = arduino
 monitor_speed = 115200
 monitor_port = COM24
+upload_speed = 921600
 lib_deps = 
 	h2zero/NimBLE-Arduino@^2.3.6
 	bblanchon/ArduinoJson@^7.4.2
