--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,9 @@ framework = arduino
 monitor_speed = 115200
 monitor_port = COM24
 upload_speed = 921600
+build_flags = -Iinclude
 lib_deps = 
 	h2zero/NimBLE-Arduino@^2.3.6
 	bblanchon/ArduinoJson@^7.4.2
 	ropg/LVGL_CYD@^1.2.2
+board_build.partitions = min_spiffs.csv
