--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@ platform = espressif32
 board = nodemcu-32s
 framework = arduino
 monitor_speed = 115200
-monitor_port = COM24
+;monitor_port = COM24
 upload_speed = 921600
 build_flags = -Iinclude
 lib_deps = 
