--- a/platformio.ini
+++ b/platformio.ini
@@ -21,3 +21,4 @@ lib_deps =
 	bblanchon/ArduinoJson@^7.4.2
 	ropg/LVGL_CYD@^1.2.2
 board_build.partitions = min_spiffs.csv
+extra_scripts = copy_configs.py
