--- a/platformio.ini
+++ b/platformio.ini
@@ -13,12 +13,13 @@ platform = espressif32
 board = nodemcu-32s
 framework = arduino
 monitor_speed = 115200
-;monitor_port = COM24
 upload_speed = 921600
 build_flags = -Iinclude
 lib_deps = 
 	h2zero/NimBLE-Arduino@^2.3.6
-	bblanchon/ArduinoJson@^7.4.2
+	https://github.com/PaulStoffregen/XPT2046_Touchscreen.git#v1.4
+	lvgl/lvgl@^9.3.0
+	bodmer/TFT_eSPI@^2.5.43
 	ropg/LVGL_CYD@^1.2.2
 board_build.partitions = min_spiffs.csv
 extra_scripts = copy_configs.py
