--- a/platformio.ini
+++ b/platformio.ini
@@ -21,5 +21,6 @@ lib_deps =
 	lvgl/lvgl@^9.3.0
 	bodmer/TFT_eSPI@^2.5.43
 	ropg/LVGL_CYD@^1.2.2
+	vshymanskyy/Preferences@^2.1.0
 board_build.partitions = min_spiffs.csv
 extra_scripts = copy_configs.py
