--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,9 @@ platform = espressif32
 board = nodemcu-32s
 framework = arduino
 monitor_speed = 115200
+monitor_filters = 
+	time
+	log2file
 upload_speed = 921600
 build_flags = -Iinclude
 lib_deps =
