--- a/platformio.ini
+++ b/platformio.ini
@@ -25,4 +25,6 @@ lib_deps =
 	bodmer/TFT_eSPI@^2.5.43
 	ropg/LVGL_CYD@^1.2.2
 board_build.partitions = min_spiffs.csv
-extra_scripts = copy_configs.py
+extra_scripts = 
+	copy_configs.py
+	erase_before_upload.py
