--- a/platformio.ini
+++ b/platformio.ini
@@ -9,8 +9,28 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:nodemcu-32s]
-platform = espressif32@6.12.0
+platform = espressif32
 board = nodemcu-32s
+framework = arduino
+monitor_speed = 115200
+monitor_filters = 
+	time
+	log2file
+upload_speed = 921600
+build_flags = -Iinclude
+lib_deps =
+	h2zero/NimBLE-Arduino@^2.3.6
+	https://github.com/PaulStoffregen/XPT2046_Touchscreen.git#v1.4
+	lvgl/lvgl@^9.3.0
+	bodmer/TFT_eSPI@^2.5.43
+	ropg/LVGL_CYD@^1.2.2
+board_build.partitions = min_spiffs.csv
+extra_scripts = copy_configs.py
+
+[env:esp32dev]
+platform = espressif32
+platform_packages = framework-arduinoespressif32 @ git+https://github.com/espressif/arduino-esp32.git#3.2.0
+board = esp32dev
 framework = arduino
 monitor_speed = 115200
 monitor_filters = 
