--- a/platformio.ini
+++ b/platformio.ini
@@ -17,11 +17,18 @@ monitor_filters =
 	time
 	log2file
 upload_speed = 921600
-build_flags = -Iinclude
+build_flags = 
+	-Iinclude
+	-Iconfigs/cyd
+	; LVGL configs
+	-DLV_CONF_PATH=\"../../configs/cyd/lv_conf.h\" ; lv_conf.h is in the configs/cyd/ folder.
+	; TFT_eSPI configs
+	-DTFT_ESPI_USER_SETUP_PATH=\"../../configs/cyd/User_Setup.h\" ; Use our custom settings in configs/cyd/User_Setup.h
 lib_deps =
 	h2zero/NimBLE-Arduino@^2.3.6
 	https://github.com/PaulStoffregen/XPT2046_Touchscreen.git#v1.4
 	lvgl/lvgl@^9.3.0
+	; Must change this to Giddy-Up224/TFT_eSPI@^2.6.0 so it uses configs/cyd/User_Setup.h as defined above
 	bodmer/TFT_eSPI@^2.5.43
 	ropg/LVGL_CYD@^1.2.2
 board_build.partitions = min_spiffs.csv
