--- a/platformio.ini
+++ b/platformio.ini
@@ -28,7 +28,7 @@ lib_deps =
 	h2zero/NimBLE-Arduino@^2.3.6
 	https://github.com/PaulStoffregen/XPT2046_Touchscreen.git#v1.4
 	lvgl/lvgl@^9.3.0
-	; Must change this to Giddy-Up224/TFT_eSPI@^2.6.0 so it uses configs/cyd/User_Setup.h as defined above
+	; TODO: Change this to Giddy-Up224/TFT_eSPI@^2.6.0 so it uses configs/cyd/User_Setup.h as defined above
 	bodmer/TFT_eSPI@^2.5.43
 	ropg/LVGL_CYD@^1.2.2
 board_build.partitions = min_spiffs.csv
